--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,9 +29,9 @@ jobs: # 수행할 내용.
     - name: Set Variables
       id: set-var
       run: |
-        echo "DOCKER_REGISTRY=Makemecookie" >> $GITHUB_ENV
+        echo "DOCKER_REGISTRY=MakeMeCookie" >> $GITHUB_ENV
         # DOCKER_REGISTRY=여러분들 도커허브계정으로 수정
         echo "DOCKER_REPOSITORY=mynginx" >> $GITHUB_ENV #본인 ecr레포에 맞게 수정
         echo "IMAGE_TAG=${{ github.run_number }}" >> $GITHUB_ENV
         echo "GIT_EMAIL=wjdtn0508@gmail.com" >> $GITHUB_ENV
-        echo "GIT_NAME=MakeMeCookie" >> $GITHUB_ENV
+        echo "GIT_NAME=kjs0508" >> $GITHUB_ENV
