--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs: # 수행할 내용.
     steps:
     - uses: actions/checkout@v4 # uses=액션들. 이미 만들어진 액션을 검색해서 가져다 쓰면된다. 해당 레포에 접근 권한이 있다면 레포를 가져올것.
       with:
-        fetch-depth: 2          #가장 최근 commit한 히스토리만 가져온다.
+        fetch-depth: 1          #가장 최근 commit한 히스토리만 가져온다.
         - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
     # 도커환경을 쓸꺼야. 도커 명령을 쓸 수 있는 환경 제공공
@@ -29,9 +29,9 @@ jobs: # 수행할 내용.
     - name: Set Variables
       id: set-var
       run: |
-        echo "DOCKER_REGISTRY=MakeMeCookie" >> $GITHUB_ENV
+        echo "DOCKER_REGISTRY=kjs0508" >> $GITHUB_ENV
         # DOCKER_REGISTRY=여러분들 도커허브계정으로 수정
         echo "DOCKER_REPOSITORY=mynginx" >> $GITHUB_ENV #본인 ecr레포에 맞게 수정
         echo "IMAGE_TAG=${{ github.run_number }}" >> $GITHUB_ENV
         echo "GIT_EMAIL=wjdtn0508@gmail.com" >> $GITHUB_ENV
-        echo "GIT_NAME=kjs0508" >> $GITHUB_ENV
+        echo "GIT_NAME=MakeMeCookie" >> $GITHUB_ENV
